<resources>
    <string name="app_name">Temp-Track: Weather Forecast</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="temp_track">Temp-Track</string>
    <string name="weather_forecast">Weather Forecast</string>
    <string name="version">Version</string>
    <string name="the_latest_version_is_already_installed">The Latest Version is already installed.</string>
    <string name="about_our_app">About Our App</string>
    <string name="say_goodbye_to_getting_caught_in_the_rain">Say Goodbye To Getting Caught In The Rain</string>
    <string name="get_accurate_real_time_weather_updates_forecasts_and_alerts_for_your_location_all_in_none_simple_app">Get accurate, real-time weather updates, forecasts, and alerts for your location, all in\none simple app</string>
    <string name="get_started">Get Started</string>
    <string name="menubar">menubar</string>
    <string name="kathmandu">Kathmandu</string>
    <string name="_19_u00b0c">19°C</string>
    <string name="mostly_clear">Mostly Clear</string>
    <string name="h_24_u00b0c">H:24°C</string>
    <string name="l_08_u00b0c">L:08°C</string>
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="_10_days">5 Days</string>
    <string name="no_result_found">No result found</string>
    <string name="settings">Settings</string>
    <string name="units">Units</string>
    <string name="temprature_units">Temprature Units</string>
    <string name="u00b0c">°C</string>
    <string name="wind_speed_units">Wind Speed Units</string>
    <string name="km_h">km/h</string>
    <string name="notifications">Notifications</string>
    <string name="daily_forecast_notification">Daily Forecast Notification</string>
    <string name="app_language">App Language</string>
    <string name="change_app_language">Change App Language</string>
    <string name="english">English</string>
    <string name="legal">Legal</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="support_amp_share"><![CDATA[Support & Share]]></string>
    <string name="share_our_app">Share Our App</string>
    <string name="rate_our_app">Rate Our App</string>
    <string name="about">About Our App</string>
    <string name="temp_track_weather_forecast">Temp-Track: Weather Forecast</string>
    <string name="copyright_2025_codepati">Copyright © 2025 CodePati</string>
    <string name="version_1_0">Version: 1.0</string>
    <string name="wind">WIND</string>
    <string name="wind_small">Wind</string>
    <string name="_9_km_h">9 km/h</string>
    <string name="aqi">AQI</string>
    <string name="_10">10</string>
    <string name="direction">Direction</string>
    <string name="_246_u00b0w">246 °W</string>
    <string name="humidity">HUMIDITY</string>
    <string name="_37">37%</string>
    <string name="the_dew_point_is_5_u00b0_right_now">The dew point is 5° right now</string>
    <string name="hourly_forecast">HOURLY FORECAST</string>
    <string name="now">Now</string>
    <string name="_10am">10AM</string>
    <string name="_11am">11AM</string>
    <string name="_12pm">12PM</string>
    <string name="_1pm">1PM</string>
    <string name="_2pm">2PM</string>
    <string name="_10_u00b0">10°</string>
    <string name="_8_u00b0">8°</string>
    <string name="_5_u00b0">5°</string>
    <string name="_15_u00b0">15°</string>
    <string name="_7_u00b0">7°</string>
    <string name="_6_u00b0">5°</string>
    <string name="sunrise">Sunrise</string>
    <string name="_5_20_am">5:20 AM</string>
    <string name="sunset">Sunset</string>
    <string name="_5_20_pm">5:20 AM</string>
    <string name="cloudy_and_sunny">Cloudy and Sunny</string>
    <string name="cloudy">Cloudy</string>
    <string name="_19_u00b0">19°</string>
    <string name="setting">Setting</string>
    <string name="language">Language</string>
    <string name="a_new_version_is_available">A new version is available</string>
    <string name="version_info_not_available">Version info not available</string>
    <string name="version_information_error">Version Information Error</string>
    <string name="cannot_reach_the_internet">Cannot reach to the internet</string>
    <string name="try_again">Try Again</string>
    <string name="check_your_internet_connection">Check your internet connection</string>
    <string name="korean">Korean</string>
    <string name="italian">Italian</string>
    <string name="nepali">Nepali</string>
    <string name="u00b0f">°F</string>
    <string name="m_h">m/h</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="_2025_feb_22">2025 Feb 22</string>
    <string name="five_days_forecast">Five Days Forecast</string>

    <string name="open">Open Drawer</string>
    <string name="close">Close Drawer</string>
</resources>