<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/setting"
        android:icon="@drawable/setting"
        android:title="@string/setting"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/share"
        android:title="@string/share_our_app"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/language"
        android:icon="@drawable/language"
        android:title="@string/language"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/privacyPolicy"
        android:icon="@drawable/privacy"
        android:title="@string/privacy_policy"
        android:textAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/termsAndConditions"
        android:icon="@drawable/terms_and_conditions"
        android:title="@string/terms_amp_conditions"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/rateOurApp"
        android:icon="@drawable/language"
        android:title="@string/rate_our_app"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
    <item
        android:id="@+id/aboutApp"
        android:icon="@drawable/about"
        android:title="@string/about_our_app"
        app:itemTextAppearance="@style/DrawerItemTextStyle" />
</menu>